fixed x overflow in about page, replaced about fontsizes with rem

--- a/styles/aboutus.css
+++ b/styles/aboutus.css
@@ -6,15 +6,16 @@
 }
 body{
     background-color: #ffffff;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 .buttonLink{
     text-decoration: none;
 }
 #mainLogo{
     display: inline;
-    font-size: 48px;
+    font-size: 2.5rem;
     vertical-align: middle;
-     
 }
 #mainSymbol{
     display: inline;
@@ -26,7 +27,7 @@ body{
 }
 #mainLogoType{
     display: inline;
-    font-size: 36px;
+    font-size: 2.5rem;
     vertical-align: middle;
     padding-left: 10px;
     padding-top: 30px;
@@ -41,7 +42,7 @@ body{
 .navBar{
     /* position: fixed; */
     display:flex;
-    min-width: 100%;
+    max-width: 100vw;
     align-items: center;
     /* background-color: red; */
     min-height: 10rem;
@@ -65,7 +66,7 @@ body{
     display: inline;
     margin: 30px;
     /* margin-top: 10px; */
-    font-size: 16px;
+    font-size: 1rem;
     text-decoration: none;
     /* vertical-align: middle; */
 }
@@ -83,7 +84,7 @@ body{
 
 
 #donateBtn{
-    font-size: 23px;
+    font-size: 1.5rem;
     /* right: 10px; */
     border-radius: 8px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.253);
@@ -111,10 +112,10 @@ body{
     color: #ffffff;
     background-color: #ff8a00;
     cursor: pointer;
-  }
+}
 
 #volunteerBtn{
-    font-size: 23px;
+    font-size: 1.5rem;
     /* right: 10px; */
     border-radius: 8px;
     font-family: 'Poppins';
@@ -135,7 +136,7 @@ body{
     cursor: pointer;
 }
 #donateBtn2{
-    font-size: 23px;
+    font-size: 1.5rem;
     /* right: 10px; */
     border-radius: 8px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.253);
@@ -168,12 +169,13 @@ body{
 .front{
     position: absolute;
     z-index: 10;
+    max-width: 100vw;
 }
 .blob{
     position: absolute;
     top: 0px;
     z-index: -30;
-    min-width: 100%;
+    width: 100vw;
     display: flex;
     justify-content: end;
     /* background-color: red; */
@@ -182,7 +184,7 @@ body{
     position: absolute;
     top: 0px;
     z-index: -20;
-    min-width: 100%;
+    width: 100vw;
     display: flex;
     /* background-color: red; */
 }
@@ -190,7 +192,7 @@ body{
     position: absolute;
     top: 0px;
     z-index: -40;
-    min-width: 100%;
+    width: 100vw;
     display: flex;
     justify-content: flex-end;
     /* background-color: red; */
@@ -199,7 +201,7 @@ body{
     background-blend-mode: multiply;
     margin-left: -1rem;
     margin-top: 6.15rem;
-    width: 100%;
+    width: 100vw;
 }
 #leftblob{
     width: 900px;
@@ -207,7 +209,7 @@ body{
     margin-top: 11.1rem;
 }
 #posterDogImg{
-    width: 650px;
+    width: 43.5vw;
     margin-top: 14.5rem;
     margin-left: 8rem;
 }
@@ -288,7 +290,7 @@ body{
 }
 .cardHeading{
     font-family: "Poppins";
-    font-size: 48px;
+    font-size: 3rem;
     font-weight: 900;
 }
 .cardBody{
@@ -297,7 +299,7 @@ body{
     text-justify: left;
     font-family: "Oxygen";
     font-weight: 500;
-    font-size: 18px;
+    font-size: 1.1rem;
 }
 .cardMediaContainer{
     border-radius: 8px;
@@ -323,4 +325,3 @@ body{
 #line1footer{
     margin-top: 13.7rem;
 }
-
